# hyper-optimizer

./: Cargo.toml
src/: config.rs  lib.rs  library.rs  output.rs  runner.rs  runner_builder.rs  testing.rs
src/runners/: bayesian_runner.rs  boxed_runner.rs  composed_runner.rs  fixed_runner.rs  genetic_runner.rs  grid_runner.rs  mod.rs  random_runner.rs
