[package]
name = "hyper-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["hyper-optimizer-derive"]

[dependencies]
log = "0.4.17"
rand = { version = "0.8.5", features = ["alloc"] }
hyper-optimizer-derive = { git="https://github.com/TerecAndrei/hyper-optimizer-derive.git", optional = true}
friedrich = "0.5.0"
simplers_optimization = "0.4.3"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
itertools = "0.10.5"
